# sekretar

./: .gitignore  .gitmodules  AI_INFRASTRUCTURE.md  AUTOMATED_TEST_REPORT.md  BRD_extracted.txt  BUG_TRACKER.md  CLEANUP_REPORT.md  MASTER_PLAN.md  MCP_SETUP.md  MinimalApp.swift  MinimalDemo.swift  Package.swift  QUICK_TEST.md  README.md  TESTING_CHECKLIST.md  TESTING_GUIDE.md  TEST_REPORT_TEMPLATE.md  TaskRowView.swift  WEEK_7_8_INTEGRATION.md  WEEK_7_8_TEST_REPORT.md  deploy_to_device.sh  mlc-package-config.json  test_parser.swift
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init.sql  pyproject.toml  test_api.sh
backend/app/: __init__.py  config.py  main.py
backend/app/api/: auth.py  sync.py
backend/app/db/: __init__.py  database.py
backend/app/models/: __init__.py  memory.py  task.py  user.py
backend/app/services/: auth_service.py
calendAI/: AIActionPreviewView.swift  AIIntentService.swift  AIProviderFactory.swift  AnalyticsService.swift  CalendarScreen.swift  ChatScreen.swift  DemoCalendarAI.swift  Entities.swift  EventKitService.swift  FeatureFlags.swift  LLMProvider.swift  Localizable.swift  MLCLLMProvider.swift  ModelManager.swift  Persistence.swift  RemoteLLMProvider.swift  SettingsViewModel.swift  SettingsViewModel.swift.backup  SideMenuView.swift  SimpleCalendarViewModel.swift  Style.swift  TaskEditorView.swift  TaskListView.swift  calendAIApp.swift
calendAI.xcodeproj/: project.pbxproj
calendAITests/: calendAITests.swift
calendAIUITests/: calendAIUITests.swift  calendAIUITestsLaunchTests.swift
(+124 files in other folders)
